--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,7 @@
 bot.token=848597236:AAGQdLvR-gN66qCOw0kmdTePplt_wrX_MJg
 bot.username=Checkkk_bot
+operator.bot.token=840390661:AAFBqu3kdnNFTleGwYwCy6fzIE8eqpEM1GM
+operator.bot.username=H2o_operator_bot
 server.port=10000
 spring.datasource.url=jdbc:postgresql://localhost:5500/h2o
 spring.datasource.username=huyser
@@ -7,3 +9,5 @@ spring.datasource.password=111111
 admin.id=475233118
 order.channel.id=-1001217792897
 registration.channel.id=-1001249674449
+operator.order.channel.id=-1001360010861
+operator.id=837124292
