--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-bot.token=848597236:AAGQdLvR-gN66qCOw0kmdTePplt_wrX_MJg
-bot.username=Checkkk_bot
+bot.token=1025265143:AAHct8f7Htinr2HSv6zUBEOWOilGNESFx2c
+bot.username=H2Opartner_bot
+operator.bot.token=894279629:AAFKptiRfHX9Ron1j9uQzeJJPBpCK6zhB-E
+operator.bot.username=Zakazh2o_bot
 server.port=10000
-spring.datasource.url=jdbc:postgresql://localhost:5500/h2o
-spring.datasource.username=huyser
-spring.datasource.password=111111
-admin.id=475233118
-order.channel.id=-1001217792897
-registration.channel.id=-1001249674449
+spring.datasource.url=jdbc:postgresql://postgres/h2o
+spring.datasource.username=h2oAdmin
+spring.datasource.password=tv2AZ*6y9QnS6
+admin.id=520006312
+order.channel.id=-1001422561383
+registration.channel.id=-1001455144474
+first.order.channel.id=-1001463199210
+second.order.channel.id=-1001460050398
+operator.id=837124292
