Two groups completed, start third bot(not testing)

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
-bot.token=1025265143:AAHct8f7Htinr2HSv6zUBEOWOilGNESFx2c
-bot.username=H2Opartner_bot
+bot.token=848597236:AAGQdLvR-gN66qCOw0kmdTePplt_wrX_MJg
+bot.username=Checkkk_bot
 operator.bot.token=840390661:AAFBqu3kdnNFTleGwYwCy6fzIE8eqpEM1GM
 operator.bot.username=H2o_operator_bot
 server.port=10000
