3 groups complete(full order not complete)

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,6 +2,8 @@ bot.token=848597236:AAGQdLvR-gN66qCOw0kmdTePplt_wrX_MJg
 bot.username=Checkkk_bot
 operator.bot.token=840390661:AAFBqu3kdnNFTleGwYwCy6fzIE8eqpEM1GM
 operator.bot.username=H2o_operator_bot
+auction.bot.token=1064083073:AAE-U1VOEk2LSbaZIgs7rM4khC2jMPaqTp8
+auction.bot.username=MaincleaningOrder_bot
 server.port=10000
 spring.datasource.url=jdbc:postgresql://localhost:5500/h2o
 spring.datasource.username=huyser
@@ -11,4 +13,7 @@ order.channel.id=-1001217792897
 registration.channel.id=-1001249674449
 first.order.channel.id=-1001360010861
 second.order.channel.id=-1001158876049
+main.order.channel.id=-1001154017770
 operator.id=475233118
+cron.notification.sender.before.day= 0 0 * * * *
+cron.notification.sender.cleaning.day=0 0 14 * * *
